--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "smtools-agingwipchart",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://adnanbwp.github.io/smtools-agingwip/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
