--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/papaparse": "^5.3.14",
+    "d3": "^7.9.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
