--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "d3": "^7.9.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
